Fixed the top bar on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -120,7 +120,7 @@ $nav-bg-color: $accent1;
 .responsive-nav-social {
   padding: $nav-padding;
   background-color: $nav-bg-color;
-  z-index: 100;
+  z-index: 1000;
   &.is-stuck {
     width: 100%;
     box-shadow: 0px 4px 10px -2px rgba(128, 128, 128, 0.68);
